--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
   font-family: Roboto-BoldItalic;
   src: url(../vendor/fonts/Roboto/Roboto-BoldItalic.ttf);
 }
+@font-face {
+  font-family: Roboto-LightItalic;
+  src: url(../vendor/fonts/Roboto/Roboto-LightItalic.ttf);
+}
 
 /*----------Montserrat----------*/
 @font-face {
@@ -193,32 +197,21 @@ header .home-slide .carousel-indicators .active .carousel-box::before,
 header .home-slide .carousel-indicators .carousel-box:hover::before {
   width: 100px;
 }
-.about .story .small-heading,
-.service .amazing-service .small-heading,
-.service .unique-design .small-heading,
-.service .what-we-do .small-heading,
-.team .small-heading {
+.small-heading {
   font-family: "KaushanScript-Regular";
   font-size: 24px;
   padding-top: 91px;
   padding-bottom: 13px;
   color: #333;
 }
-.about .story .big-heading,
-.service .amazing-service .big-heading,
-.service .unique-design .big-heading,
-.service .what-we-do .big-heading,
-.team .big-heading {
+.big-heading {
   font-family: "Montserrat-Bold";
   font-size: 30px;
   color: #333;
   padding-bottom: 33px;
   text-transform: uppercase;
 }
-.about .story .description,
-.service .amazing-service .description,
-.service .what-we-do .description,
-.team .description {
+.description {
   padding-top: 45px;
   padding-bottom: 100px;
   font-family: "Roboto-Regular";
@@ -431,4 +424,144 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
+}
+.work .row img {
+  width: 100%;
+}
+.hover-active {
+  display: block;
+  height: 50%;
+  position: relative;
+  top: 0;
+  left: 0;
+  transition: .3s;
+}
+.hover-active::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(#f38181, #fce38a);
+  transition: 0.3s;
+  opacity: 0;
+}
+.hover-active:hover::before {
+ height: 100%;
+ opacity: .9;
+}
+.cont-hover {
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  text-align: center;
+  color: #ffffff;
+  transition: 0.3s;
+  opacity: 0;
+}
+.cont-hover:hover {
+  opacity: 1;
+}
+.row .cont-hover img {
+  width: 20%;
+  margin-bottom: 7px;
+}
+.cont-hover h2 {
+  font-size: 14px;
+  font-family: "Montserrat-Regular";
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.cont-hover>p {
+  font-family: "Roboto-LightItalic";
+  font-size: 15px;
+  color: #ffffff;
+}
+#hclient {
+  background-image: url(/img/work/background.jpg);
+}
+#hclient .row h3 {
+  font-family: "Montserrat-Regular";
+  font-size: 14px;
+  color: #333333;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+#hclient .row h4 {
+  font-family: "Roboto-LightItalic";
+  font-size: 15px;
+  color: #999999;
+}
+#hclient .row .description {
+  padding: 0;
+}
+#hclient .row .h-line {
+  margin-left: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#hclient .client_card {
+  margin-bottom: 45px;
+}
+#hclient .row img {
+  height: 100%;
+  width: 100%;
+}
+.calendar {
+  background-color: #95e1d3;
+  position: absolute;
+  top: 160px;
+  left: 2px;
+  padding: 2px 15px;
+}
+#blog .head_blog {
+  margin-bottom: 40px;
+}
+#blog .calendar .big-heading {
+  color: #ffffff;
+}
+.month {
+  color: #ffffff;
+  font-family: "Roboto-LightItalic";
+}
+#blog .name {
+  display: inline-block;
+  font-family: "Montserrat-Regular";
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #333333;
+}
+.blog-hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#blog .view {
+  margin-right: 10px;
+}
+.map {
+  background-image: url(/img/work/background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.map a {
+  display: block;
+  margin: auto;
+  text-align: center;
+  padding-top: 45px;
+  padding-bottom: 45px;
+}
+.map img {
+  display: block;
+  margin: auto;
+}
+.open-map {
+  color: #f38181;
+  font-size: 25px;
+  font-family: "Montserrat-Bold";
+  margin-bottom: 10px;
+  display: inline-block;
 }
