--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,13 @@ a:hover {
 	background-repeat: no-repeat;
 	background-position: center;
 }
+
+.home .navbar .nav li {
+	margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 30px;
+}
+
 .home a:visited {
   color: white !important;
 }
@@ -223,6 +230,7 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
 .carx {
   background-color: #95e1d3;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .overlay > img{
@@ -424,6 +432,21 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
+  .home .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left:0;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+}
+.home .navbar .nav li {
+  margin-top: 7px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+
+}
 }
 .work .row img {
   width: 100%;
@@ -534,6 +557,8 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   text-transform: uppercase;
   font-weight: bold;
   color: #333333;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 .blog-hr {
   margin-top: 20px;
@@ -542,10 +567,13 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
 #blog .view {
   margin-right: 10px;
 }
+
+
 .map {
   background-image: url(../img/work/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 100px;
 }
 .map a {
   display: block;
@@ -564,4 +592,167 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   font-family: "Montserrat-Bold";
   margin-bottom: 10px;
   display: inline-block;
+}
+
+.social {
+  margin-top: 72px;
+}
+
+.logo-footer {
+  font-size: 46px;
+  color: #cccccc;
+  line-height: 51px;
+  font-family: "Montserrat-Bold";
+}
+
+.social .social__follow {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
+.social .follower {
+  font-family: "Montserrat-Regular";
+  font-size: 14px;
+  color: #333333;
+  font-weight: bold;
+}
+
+.social .follower span {
+  font-size: 20px;
+  font-family: "Montserrat-Bold";
+}
+
+.social hr {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.social .social__follow a {
+  margin-left: 3px;
+  font-size: 1.2em;
+  color: #95e1d3;
+}
+
+.social input {
+  width: 60%;
+  height: 100%;
+  max-width: 400px;
+  float: left;
+  border-radius: 0;
+}
+
+.social button.btn {
+  background-color: #95e1d3;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 14px;
+  border: none;
+  height: 100%;
+  width: 40%;
+  text-align: center;
+  float: left;
+  max-width: 150px;
+  border-radius: 0;
+  font-family: "Montserrat-Bold";
+}
+
+.footer__title--blog,
+.footer__title--instagram {
+  font-family: "Montserrat-Regular";
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-bottom: 32px;
+  font-weight: bold;
+  display: block;
+  color: #000000;
+}
+
+.social .blog-row a {
+  padding-right: 20px;
+  font-family: "Montserrat-Regular";
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #333333;
+  font-weight: bold;
+}
+
+.social .blog-row {
+  padding-bottom: 26px;
+}
+
+.social .blog-row span {
+  display: block;
+  padding-top: 5px;
+  font-family: "Roboto-LightItalic";
+  font-size: 13px;
+}
+
+.social .instagram img {
+  width: 110%;
+}
+
+
+
+.social .instagram .row>div {
+  padding: 1px;
+}
+
+.social .instagram>a {
+  color: #333;
+  font-size: 13px;
+  font-family: "Roboto-LightItalic";
+  margin-top: 5px;
+}
+
+.copyright hr {
+  margin-top: 30px;
+}
+
+.title--copyright {
+  font-family: "Montserrat-Regular";
+  font-size: 13px;
+  font-weight: bold;
+  color: black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.title--copyright a {
+  color: red;
+}
+
+@media only screen and (max-width: 992px) {
+  .blog .row {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+
+  .blog .row .name {
+    display: block;
+    position: relative;
+  }
+
+  .blog .row>div {
+    margin-bottom: 35px;
+  }
+
+  .blog-hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .social {
+    margin-left: 30px;
+  }
+
+  .social .row>div {
+    margin-bottom: 35px;
+  }
+
+  .footer__title--blog,
+  .footer__title--instagram {
+    margin-bottom: 20px;
+  }
+
+  
 }
