--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,7 @@ a:hover {
   width: 60px;
   background-color: #f38181;
 }
-@media only screen and (min-width: 1200px) {
-  .container-box {
-    max-width: 1200px;
-    margin: auto;
-  }
-}
+
 
 .margin-auto {
   margin: auto !important;
@@ -148,7 +143,7 @@ header .home-slide .template {
 }
 header .home-slide .slogan {
   font-family: "Montserrat-Bold";
-  font-size: 150px;
+  font-size: 5.5rem;
   color: white;
   text-transform: uppercase;
   margin-top: 0;
@@ -175,6 +170,8 @@ header .home-slide .carousel-indicators {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
+  position: relative;
+  
 }
 header .home-slide .carousel-indicators .carousel-box {
   border-top:2px solid #fff;
@@ -213,7 +210,7 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
 }
 .big-heading {
   font-family: "Montserrat-Bold";
-  font-size: 30px;
+  font-size: 2rem;
   color: #333;
   padding-bottom: 33px;
   text-transform: uppercase;
@@ -226,6 +223,8 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   line-height: 24px;
   max-width: 960px;
   display: inline-block;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 .carx {
   background-color: #95e1d3;
@@ -343,9 +342,10 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
 }
 .amazing-service .row h2 {
   font-size: 14px;
-  font-family: "Montserrat-Regular";
+  font-family: "Montserrat-Bold";
   color: #333;
   text-transform: uppercase;
+  
 } 
 .amazing-service .row p {
   line-height: 24px;
@@ -372,6 +372,11 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
 .what-we-do {
   margin-bottom: 120px;
 }
+
+.what-we-do .row img {
+  width: 100%;
+}
+
 .quote {
   background-color: #f5f5f5;
 }
@@ -410,11 +415,17 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   display: inline-block;
   margin-bottom: 20px;
 }
+
+.team .row>div {
+  margin-bottom: 35px;
+}
+
 .partner {
   background-color: #f5f5f5;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  margin-bottom: 110px;
+  margin-top: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 70px;
 }
 
 .partner img  {
@@ -432,12 +443,7 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
     padding-bottom: 30px;
     margin-bottom: 30px;
   }
-  .home .navbar-collapse {
-    position: absolute;
-    top: 100%;
-    left:0;
-    background-color: rgba(0,0,0,0.5);
-    width: 100%;
+  
 }
 .home .navbar .nav li {
   margin-top: 7px;
@@ -447,8 +453,8 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   margin-right: 0px;
 
 }
-}
-.work .row img {
+
+.work .row div img {
   width: 100%;
 }
 .hover-active {
@@ -487,7 +493,7 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   opacity: 1;
 }
 .row .cont-hover img {
-  width: 20%;
+  width: 20% !important;
   margin-bottom: 7px;
 }
 .cont-hover h2 {
@@ -687,11 +693,6 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   font-size: 13px;
 }
 
-.social .instagram img {
-  width: 110%;
-}
-
-
 
 .social .instagram .row>div {
   padding: 1px;
@@ -721,7 +722,19 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
   color: red;
 }
 
+.instagram .row img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 992px) {
+  .home .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left:0;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+  }
+
   .blog .row {
     margin-right: 30px;
     margin-left: 30px;
@@ -745,14 +758,13 @@ header .home-slide .carousel-indicators .carousel-box:hover::before {
     margin-left: 30px;
   }
 
-  .social .row>div {
+  /* .social .row>div {
     margin-bottom: 35px;
-  }
+  } */
 
   .footer__title--blog,
   .footer__title--instagram {
     margin-bottom: 20px;
   }
-
-  
+ 
 }
